# audio-features

./: LICENSE  README.md  config.cfg  conftest.py  setup.cfg  setup.py
audio_pipe/: __init__.py  factory.py  pipeline.py  transformers.py
audio_pipe/cli/: entrypoint.py
tests/: test_config.py  test_factory.py  test_pipeline.py  test_transformers.py
