[metadata]
version = 1.0.0
description = Feature extraction for audio files
author = Eemeli Saari
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.8
install_requires = 
    click==8.0.3
    librosa==0.8.1

setup_requires = 
    setuptools

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts = 
    audio_features = audio_pipe.cli.entrypoint:cli

[bdist_wheel]
universal = true

[sdist]
formats = gztar
